--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     <script src="common/main.service.js"></script>
     <script src="common/video.service.js"></script>
     <script src="common/main.controller.js"></script>
+    <script src="common/auth.controller.js"></script>
+
     <!-- endbuild -->
     
 
