--- a/pages/login.tpl.html
+++ b/pages/login.tpl.html
@@ -15,7 +15,7 @@
       <a aria-hidden="true" href="#" class="glyphicon glyphicon-cog glyphiconCog"></a>
     </div>
   </div>
-  <form>
+  <form ng-submit="vm.emailLogin()">
     <div class="well well-sm">
       <h4>
         <strong class="title-auth">
@@ -26,10 +26,10 @@
         {{ errorLogin }}
       </div>
       <div class="form-group">
-        <input type="email" ng-model="loginModal.email" class="form-control input-email" placeholder="Email">
+        <input type="email" ng-model="vm.email" class="form-control input-email" placeholder="Email">
       </div>
       <div class="form-group">
-        <input type="password" ng-model="loginModal.password" class="form-control input-password" placeholder="Password">
+        <input type="password" ng-model="vm.password" class="form-control input-password" placeholder="Password">
       </div>
       <h4>
         <strong class="title-auth">
