--- a/pages/register.tpl.html
+++ b/pages/register.tpl.html
@@ -26,13 +26,13 @@
         Error message
       </div>
       <div class="form-group">
-        <input type="text" ng-model="registerModel.name" class="form-control input-name" placeholder="Name">
+        <input type="text" ng-model="vm.name" class="form-control input-name" placeholder="Name">
       </div>
       <div class="form-group">
-        <input type="email" ng-model="registerModel.email" class="form-control input-reg-email" placeholder="Email">
+        <input type="email" ng-model="vm.email" class="form-control input-reg-email" placeholder="Email">
       </div>
       <div class="form-group">
-        <input type="password" ng-model="registerModel.password" class="form-control input-password" placeholder="Password">
+        <input type="password" ng-model="vm.password" class="form-control input-password" placeholder="Password">
       </div>
       <h4>
         <strong class="title-auth">
@@ -43,7 +43,7 @@
         </strong>
       </h4>
       <br>
-      <button ng-click="register()" class="btn btn-circle btn-default">Go </button>
+      <button ng-click="vm.register()" class="btn btn-circle btn-default">Go </button>
     </div>
   </form>
 </div>
