--- a/pages/login.tpl.html
+++ b/pages/login.tpl.html
@@ -31,7 +31,7 @@
       <div class="error-message" ng-show="loginForm.email.$error.required  && (!loginForm.$pristine || loginForm.$submitted)">
         The email filed is required
       </div>
-      <div class="error-message" ng-show="loginForm.password.$error.required && !loginForm.email.$error.required && !loginForm.email.$error.email && (!registerForm.$pristine || registerForm.$submitted)">
+      <div class="error-message" ng-show="loginForm.password.$error.required && !loginForm.email.$error.required && !loginForm.email.$error.email && (!loginForm.$pristine || loginForm.$submitted)">
         The password filed is required
       </div>
       <div class="form-group">
