--- a/modules/mod-header/header.tpl.html
+++ b/modules/mod-header/header.tpl.html
@@ -25,6 +25,9 @@
   <div ng-init="pageObj.showMenu = false" ng-class="{active: pageObj.showMenu}" ng-mouseleave="pageObj.mouseEnterLeave('hide')" class="menu-wrapper">
     <ul class="menu clearfix">
       <li ng-repeat="itm in pageObj.menu" ng-class="{active: itm.active}" class="grid-15 tablet-grid-25 mobile-grid-50"><a ng-href="{{itm.url}}">{{itm.text}}</a></li>
+      <li class="grid-15 tablet-grid-25 mobile-grid-50" ng-repeat="tag in pageObj.tagsMenu" ng-click="pageObj.filterByTag(tag.id); pageObj.showTags = !pageObj.showTags; pageObj.hideTags()" ng-class="{active: pageObj.selectedTag == tag.id}">
+      <a href="">{{tag.name}}</a>
+    </li>
       <li class="grid-15 tablet-grid-25 mobile-grid-50"><a ng-click="pageObj.clickShowTags()">Filter via tags</a></li>
     </ul>
   </div>
